#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2002 Mark Wong & Open Source Development Labs, Inc.
#
# Copyright (c) 2011, Oracle and/or its affiliates. All rights reserved
#
# Added a number of new files to be part of the source distribution
#

# Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = . src storedproc

# FIXME: do we need all these files in the distribution?
EXTRA_DIST = \
AUTHORS \
LICENSE \
README \
README-GENERAL \
README-AUTOMATED \
README-FREEBSD \
README-ICLAUSTRON \
README-MYSQL \
README-POSTGRESQL \
README-SOLARIS \
bootstrap.sh \
storedproc/Makefile.am \
storedproc/mysql/delivery.sql \
storedproc/mysql/new_order.sql \
storedproc/mysql/new_order_2.sql \
storedproc/mysql/order_status.sql \
storedproc/mysql/payment.sql \
storedproc/mysql/stock_level.sql \
scripts/bench_prepare.sh \
scripts/create_dbt2_files.sh \
scripts/dbt2.sh \
scripts/gen_html.sh \
scripts/mgm_cluster.sh \
scripts/mix_analyzer.pl \
scripts/notpm.input \
scripts/run_dbt2_test.sh \
scripts/run_mysql.sh \
scripts/run_oltp.sh \
scripts/start_ndb.sh \
scripts/vmplot.sh \
scripts/mysql_dbt2_plans.sh \
scripts/mysql_load_db.sh  \
scripts/mysql_load_sp.sh  \
doc/Makefile \
doc/maintenance.sxw \
doc/class.dia \
doc/component.dia \
doc/dbt2-architecture.tex \
doc/dbt2-user.tex \
doc/dbt2-tpc.tex
